# AI-Team-Room

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: package.yml  test.yml
docs/: ARCHITECTURE.md  LAUNCH.md  PROJECT_BRIEF_20260719.md  PROTOCOL.md
scripts/: build_macos.sh  build_windows.ps1  notarize_macos.sh  smoke_macos_release.py  smoke_windows_release.py  windows_client_entry.py  windows_server_entry.py
src/ai_team_room/: __init__.py  auth.py  cli.py  server.py  store.py
src/ai_team_room/web/: app.js  index.html
tests/: test_cli.py  test_server.py  test_store.py
